--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,4 @@
-.mat-sidenav, .mat-sidenav-content {
-    padding: 24px;
-}
-
 .router-container {
-    height: calc(100vh - 112px); // 48 padding + 64 toolbar
+    height: 100vh; 
     width: 100%;
 }
