--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,7 @@
 .router-container {
     height: 100vh; 
     width: 100%;
+    background-image: url("/assets/background.jpg");
+    background-size: cover;
+    opacity: 0.5;
 }
