--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="router-container">
+  <div class="logo-container flex flex-row justify-center items-center">
+    <div class="logo"></div>
+  </div>
   <router-outlet></router-outlet>
 </div>
 
