--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="container">
+    <mat-card>
+        <mat-card-content>Simple card</mat-card-content>
+    </mat-card>
+</div>
