Added routing animations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div class="router-container">
+<div class="app-container">
   <div class="logo-container flex flex-row justify-center items-center">
     <div class="logo"></div>
   </div>
-  <router-outlet></router-outlet>
+  <div [@routeAnimations]="getRouteAnimationData()">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
