--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,15 @@
-<div class="container">
-    <mat-card>
-        <mat-card-content>Simple card</mat-card-content>
-    </mat-card>
+<div class="cards-conatiner">
+    <div class="w-full flex flex-col justify-center items-center gap-4">
+        <mat-card class="card">
+            <mat-card-content>
+                <h1>Witaj na naszej stronie mającej na celu pomóc Ci wybrać studia</h1>
+            </mat-card-content>
+        </mat-card>
+        <mat-card class="card link-card" routerLink="/questionnaire">
+            <mat-card-content>
+                <h2>Kliknij tutaj aby dowiedzieć się jakie studia są najlepsze dla Ciebie!</h2>
+            </mat-card-content>
+        </mat-card>
+    </div>
 </div>
+
