--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,15 @@
-.router-container {
+.app-container {
     height: 100vh; 
     width: 100%;
-    background-image: url("/assets/background.jpg");
+    background-image:
+        linear-gradient(rgba(255,255,255,0.5),
+        rgba(255,255,255,0.5)),
+        url("/assets/background.jpg");
     background-size: cover;
-    opacity: 0.5;
 }
 
 .logo-container {
-    height: 20vh;
+    height: 200px;
     width: 100vw;
 }
 
