--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,11 @@
     <div class="w-full flex flex-col justify-center items-center gap-4">
         <mat-card class="card">
             <mat-card-content>
-                <h1>Witaj na naszej stronie mającej na celu pomóc Ci wybrać studia</h1>
+                <h2>Witaj na naszej stronie mającej na celu pomóc Ci wybrać studia.</h2>
+                <h3 class="mt-2">
+                    Dzięki potędze sztucznej inteligencji będziemy mogli podpowiedzić Ci idealny kierunek studiów.
+                    Nie ma znaczenia czy właśnie zdałeś maturę czy marzysz o zmianie pracy, nasza strona jest dla Ciebie.
+                </h3>
             </mat-card-content>
         </mat-card>
         <mat-card class="card link-card" routerLink="/questionnaire">
