--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,7 @@
 .logo {
     height: 20vh;
     width: 20vh;
-    background-image: url("/assets/logo.jpg");
+    background-image: url("/assets/logo.png");
     background-size: contain;
     background-repeat: no-repeat;
     
