--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
     background-image:
         linear-gradient(rgba(255,255,255,0.5),
         rgba(255,255,255,0.5)),
-        url("/assets/background.jpg");
+        url("/assets/background.png");
     background-size: cover;
 }
 
