--- a/src/app/features/questionnaire/components/question/question.component.html
+++ b/src/app/features/questionnaire/components/question/question.component.html
@@ -1,1 +1,15 @@
-<p>question works!</p>
+<div class="flex flex-col justify-between items-center gap-2 question-container">
+    <mat-card class="question-card flex justify-center items-center">
+        <mat-card-content>
+            {{question.value}}
+        </mat-card-content>
+    </mat-card>
+    
+    <div class="flex flex-row flex-wrap gap-1 answer-container">
+        <mat-card *ngFor="let answer of question.answers;" class="answer-card flex justify-center items-center" (click)="answerClick(answer)">
+            <mat-card-content>
+                {{answer.value}}
+            </mat-card-content>
+        </mat-card>
+    </div>
+</div>
