--- a/src/app/features/questionnaire/questionnaire.component.scss
+++ b/src/app/features/questionnaire/questionnaire.component.scss
@@ -1,7 +1,7 @@
 .questionnaire-container {
     width: 100%;
     height: 100%;
-    padding: 48px;
+    padding: 0 24px;
     display: flex;
     flex-direction: column;
     justify-content: center;
