Fix questions apperance

--- a/src/app/features/questionnaire/components/question/question.component.scss
+++ b/src/app/features/questionnaire/components/question/question.component.scss
@@ -25,8 +25,11 @@
 .answer-card{
     width: calc(50% - 0.125rem);
     height: 20vh;
+    :hover {
+        cursor: pointer;
+    }
 }
 
-.answer-container:hover {
-    cursor: pointer;
+.answer-container {
+    width: 100%;
 }
