--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,24 +1,17 @@
 .app-container {
     height: 100vh; 
     width: 100%;
-    background-image:
-        linear-gradient(rgba(255,255,255,0),
-        rgba(255,255,255,0)),
-        url("/assets/background.png");
     background-size: cover;
     overflow: hidden;
 }
 
 .logo-container {
-    height: 200px;
-    width: 100vw;
-}
-
-.logo {
-    height: 20vh;
-    width: 50vh;
-    background-image: url("/assets/logo.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    
+    background-image:
+        linear-gradient(rgba(255,255,255,0),
+        rgba(255,255,255,0)),
+        url("/assets/background.png");
+    background-position: 50%;
+    background-size: 100%;
+    border-radius: 1rem;
+    margin: 1rem;
 }
