--- a/src/app/features/questionnaire/components/question/question.component.scss
+++ b/src/app/features/questionnaire/components/question/question.component.scss
@@ -1,32 +1,22 @@
-.question-container {
-    width: 70vw;
+::ng-deep button {
+    height: initial!important;
+    max-height: 5rem;
+    padding: 1rem 1rem!important;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
-    width: 100%;
+h2 {
+    color: white;
 }
 
-.grid-item {
-    padding: 5px;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-}
-
-.question-card {
-    height: 20vh;
-    width: 100%;
-}
-
-.answer-card{
-    width: calc(50% - 0.125rem);
-    height: 20vh;
-}
-
-.answer-container:hover {
-    cursor: pointer;
+.buttons-container {
+    flex-wrap: wrap;
+    flex-direction: column;
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        button {
+            width: calc(50% - 1rem);
+            margin: .5rem;
+            padding: 2rem!important;
+        }
+    }
 }
