updated resutls model

--- a/src/app/features/results/results.component.html
+++ b/src/app/features/results/results.component.html
@@ -4,7 +4,7 @@
   </div>
   
   <div *ngIf="!isLoading" class="parent">
-    <app-results-chart [results]="results"></app-results-chart>
+    <app-results-chart [results]="result.fieldOfStudyProposals"></app-results-chart>
   </div>
 </div>
 
