--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
-  <div class="logo-container flex flex-row justify-center items-center">
+  <!-- <div class="logo-container flex flex-row justify-center items-center">
     <img width="300" class="py-5" src="/assets/logo.png" alt="">
-  </div>
+  </div> -->
   <div [@routeAnimations]="getRouteAnimationData()">
     <router-outlet></router-outlet>
   </div>
