--- a/src/app/features/questionnaire/components/question/question.component.html
+++ b/src/app/features/questionnaire/components/question/question.component.html
@@ -1,15 +1,26 @@
-<div class="p-3">
+<div class="p-3 ">
 
-    <div class="text-center mb-3"> 
-        <h2>{{question.value}}</h2>
+
+    <div class="card">
+        {{question.value}}
     </div>
 
-    <div class="flex buttons-container "> 
+    <div class="actions p-3 flex justify-center">
+        <button mat-fab color="primary" class="m-2">
+            <mat-icon>close</mat-icon>
+        </button>
+        <button mat-fab color="accent" class="m-2">
+            <mat-icon>check</mat-icon>
+        </button>
+    </div>
+
+
+    <!-- <div class="flex buttons-container "> 
         <button class="mb-3" mat-raised-button color="primary" *ngFor="let answer of question.answers;" (click)="answerClick(answer)">
             <span class="text-16">
                 {{answer.value}}
             </span>
         </button>
-    </div>
+    </div> -->
 
 </div>
