--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,14 @@
 <div class="cards-conatiner">
     <div class="w-full flex flex-col justify-center items-center gap-4">
-        <div class="p-3">
+        <div class="card p-3">
             <h2>Witaj na naszej stronie mającej na celu pomóc Ci wybrać studia.</h2>
                 <h3 class="mt-2">
                     Dzięki potędze sztucznej inteligencji będziemy mogli podpowiedzić Ci idealny kierunek studiów.
                     Nie ma znaczenia czy właśnie zdałeś maturę czy marzysz o zmianie pracy, nasza strona jest dla Ciebie.
                 </h3>
         </div>
-        <button class="mb-3" mat-raised-button color="primary" routerLink="/questionnaire">
-            <span class="text-16">
-                Zaczynajmy!
-            </span>
+        <button mat-fab color="accent" class="m-2" routerLink="/questionnaire">
+            <mat-icon>arrow_forward</mat-icon>
         </button>
     </div>
 </div>
