--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,20 @@ html, body { height: 100%;
 background-color: rgb(39, 37, 45);
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.card {
+    background-color: rgb(245, 230, 255);
+    padding: 1rem;
+    border-radius: 1rem;
+    height: 80vh;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 1.5;
+}
