--- a/src/app/features/results/components/results-chart/results-chart.component.scss
+++ b/src/app/features/results/components/results-chart/results-chart.component.scss
@@ -7,6 +7,11 @@
 }
 
 .card {
-    width: 50vw;
-    height: 50vh;
+    width: 75vw;
+    height: 75vh;
+}
+
+.chart {
+    width: 500px;
+    height: 500px;
 }
