--- a/src/app/features/questionnaire/components/question/question.component.html
+++ b/src/app/features/questionnaire/components/question/question.component.html
@@ -1,26 +1,14 @@
 <div class="p-3 ">
-
-
     <div class="card">
         {{question.value}}
     </div>
 
     <div class="actions p-3 flex justify-center">
-        <button mat-fab color="primary" class="m-2">
+        <button mat-fab color="primary" class="m-2" (click)="answerClick(false)">
             <mat-icon>close</mat-icon>
         </button>
-        <button mat-fab color="accent" class="m-2">
+        <button mat-fab color="accent" class="m-2" (click)="answerClick(true)">
             <mat-icon>check</mat-icon>
         </button>
     </div>
-
-
-    <!-- <div class="flex buttons-container "> 
-        <button class="mb-3" mat-raised-button color="primary" *ngFor="let answer of question.answers;" (click)="answerClick(answer)">
-            <span class="text-16">
-                {{answer.value}}
-            </span>
-        </button>
-    </div> -->
-
 </div>
