--- a/src/app/features/questionnaire/questionnaire.component.scss
+++ b/src/app/features/questionnaire/questionnaire.component.scss
@@ -1,10 +1,11 @@
+.loader {
+    height: 100vh;
+}
+
 .questionnaire-container {
     width: 100%;
     height: 100%;
     padding: 0 24px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .parent {
