--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,12 @@
-<div class="cards-conatiner">
+<div class="cards-conatiner p-3">
     <div class="w-full flex flex-col justify-center items-center gap-4">
         <div class="card p-3">
-            <h2>Witaj na naszej stronie mającej na celu pomóc Ci wybrać studia.</h2>
+            <div class="logo-container flex flex-row justify-center items-center mb-3">
+                <img width="300" class="py-5" src="/assets/logo.png" alt="">
+            </div>
+            <div class="mb-3">
+                Witaj na naszej stronie mającej na celu pomóc Ci wybrać studia.
+            </div>
                 <h3 class="mt-2">
                     Dzięki potędze sztucznej inteligencji będziemy mogli podpowiedzić Ci idealny kierunek studiów.
                     Nie ma znaczenia czy właśnie zdałeś maturę czy marzysz o zmianie pracy, nasza strona jest dla Ciebie.
