--- a/src/app/features/questionnaire/questionnaire.component.scss
+++ b/src/app/features/questionnaire/questionnaire.component.scss
@@ -5,6 +5,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    display: flex;
 }
 
 .parent {
