--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,8 @@
 html, body { height: 100%;
 background-color: rgb(39, 37, 45);
 }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
 
 
 .card {
@@ -14,13 +15,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     padding: 1rem;
     border-radius: 1rem;
     height: 80vh;
+    max-height: 600px;
     width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 600;
     line-height: 1.5;
 }
