--- a/src/app/features/questionnaire/questionnaire.component.scss
+++ b/src/app/features/questionnaire/questionnaire.component.scss
@@ -1,5 +1,5 @@
 .loader {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .questionnaire-container {
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
 }
 
