--- a/src/app/features/results/components/results-chart/results-chart.component.html
+++ b/src/app/features/results/components/results-chart/results-chart.component.html
@@ -1,8 +1,9 @@
-<mat-card class="card flex justify-center items-center">
+<div class="flex justify-center items-center">
     <canvas baseChart class="chart"
         [datasets]="radarChartData"
         [labels]="radarChartLabels"
         [options]="radarChartOptions"
-        [type]="'radar'">
+        [type]="'radar'"
+        >
     </canvas>
-</mat-card>
+</div>
