--- a/src/app/features/results/results.component.html
+++ b/src/app/features/results/results.component.html
@@ -1,14 +1,26 @@
-<div class="questionnaire-container">
+<div class="questionnaire-container p-3">
   <div *ngIf="isLoading">
       <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
   </div>
   
   <div *ngIf="!isLoading" class="parent flex flex-col justify-center items-center gap-2">
-    <app-results-chart [results]="result.fieldOfStudyProposals"></app-results-chart>
-    <mat-card class="m-6">
-      <mat-card-header><h2>Krótkie podsumowanie od sztucznej inteligencji</h2></mat-card-header>
-      <mat-card-content>{{result.expertDescription}}</mat-card-content>
-    </mat-card>
+    <div class="card mb-3">
+      <div class="text-lg">Krótkie podsumowanie od sztucznej inteligencji</div>
+      <div class="text-base">
+        {{result.expertDescription}}
+      </div>
+    </div>
+
+    <div class="card">
+      <app-results-chart [results]="result.fieldOfStudyProposals"></app-results-chart>
+    </div>
+    
+    <div class="accent flex flex-col items-center">
+      <div class="color-contrast text-center text-base mt-3">Wyniki są niezadowalające? Spróbuj ponownie.</div>
+      <button mat-fab color="primary" class="m-2" routerLink="/questionnaire">
+          <mat-icon>arrow_backward</mat-icon>
+      </button>
+  </div>
   </div>
 </div>
 
