--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,20 +9,36 @@ background-color: rgb(39, 37, 45);
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
 
-
 .card {
     background-color: rgb(245, 230, 255);
     padding: 1rem;
     border-radius: 1rem;
-    height: 80vh;
+    min-height: 80vh;
     max-height: 600px;
-    width: 400px;
+    max-width: 400px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
+}
+
+.color-contrast {
+    color: #fff;
+}
+
+.text-base {
+    font-size: 1.2rem;
+    line-height: 1.75rem;
+}
+
+.text-lg {
     font-size: 1.5rem;
-    font-weight: 600;
-    line-height: 1.5;
+    line-height: 2.2rem;
+}
+
+.text-xl {
+    font-size: 2rem;
+    line-height: 2.6rem;
 }
