--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,13 +4,13 @@
 @tailwind utilities;
 
 html, body { height: 100%;
-background-color: rgb(39, 37, 45);
+background-color: #1f3945;
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
 
 .card {
-    background-color: rgb(245, 230, 255);
+    background-color: #fff;
     padding: 1rem;
     border-radius: 1rem;
     min-height: 80vh;
