--- a/src/app/features/results/results.component.html
+++ b/src/app/features/results/results.component.html
@@ -36,7 +36,7 @@
       <div class="accent flex flex-col items-center">
         <div class="color-contrast text-center text-base mt-3">Wyniki są niezadowalające? Spróbuj ponownie.</div>
         <button mat-fab color="primary" class="m-2" routerLink="/questionnaire">
-          <mat-icon>arrow_backward</mat-icon>
+          <mat-icon>refresh</mat-icon>
         </button>
       </div>
 
