--- a/src/app/features/results/results.component.html
+++ b/src/app/features/results/results.component.html
@@ -6,7 +6,8 @@
   <div *ngIf="!isLoading">
     <div class="parent flex flex-col justify-center items-center gap-2">
       <div class="card mb-3">
-        <div class="text-lg">Krótkie podsumowanie od sztucznej inteligencji</div>
+        <div class="text-lg">Krótkie podsumowanie od sztucznej inteligencji 🥳🎉</div>
+        <img width="400" class="py-5" src="/assets/final.png" alt="">
         <div class="text-base">
           {{result.expertDescription}}
         </div>
