--- a/src/app/features/questionnaire/questionnaire.component.html
+++ b/src/app/features/questionnaire/questionnaire.component.html
@@ -1,4 +1,8 @@
 <div class="questionnaire-container">
+  <div class="logo-container flex flex-row justify-center items-center">
+    <img width="300" class="py-5" src="/assets/logo.png" alt="">
+  </div>
+
     <div class="w-full h-full flex justify-center items-center" *ngIf="loading">
         <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
     </div>
