--- a/src/app/features/questionnaire/components/question/question.component.html
+++ b/src/app/features/questionnaire/components/question/question.component.html
@@ -1,6 +1,8 @@
 <div class="p-3 ">
     <div class="card text-xl">
+        <div class="question">
         {{question.value}}
+        </div>
     </div>
 
     <div class="actions p-3 flex justify-center">
