--- a/src/app/features/questionnaire/questionnaire.component.scss
+++ b/src/app/features/questionnaire/questionnaire.component.scss
@@ -11,6 +11,7 @@
     align-items: center;
     min-height: 100vh;
     display: flex;
+    position: relative;
 }
 
 .parent {
@@ -23,4 +24,26 @@
     grid-row: 1 / 1;
     display: flex;
     justify-content: center;
+}
+
+.logo-container {
+    background-image:
+        linear-gradient(rgba(255,255,255,0),
+        rgba(255,255,255,0)),
+        url("/assets/background.png");
+    background-position: 50%;
+    background-size: cover;
+    border-radius: 1rem;
+    margin: 1rem;
+    padding: 1rem 2rem;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    box-shadow: 0 0 50px #0c222e;
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+    z-index: 1;
+    @media screen and (max-width: 1300px) {
+        transform: translateX(-200%);
+        opacity: 0;
+    }
 }
