--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 html, body { height: 100%;
-background-color: #1f3945;
+background-color: #1d364b;
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
@@ -15,13 +15,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
     border-radius: 1rem;
     min-height: 80vh;
     max-height: 600px;
-    max-width: 400px;
+    max-width: 700px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
+    box-shadow: 0 0 50px #152b3d;
 }
 
 .color-contrast {
