--- a/src/app/features/results/results.component.html
+++ b/src/app/features/results/results.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div *ngIf="!isLoading">
-    <div class="summary flex flex-wrap justify-center items-center gap-4">
+    <div class="summary flex flex-wrap justify-center gap-4">
 
       <div>
         <div class="logo-container flex flex-row justify-center items-center">
