change text on home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,7 @@
                 Witaj na naszej stronie mającej na celu pomóc Ci wybrać studia.
             </div>
             <div class="mt-2 content text-base">
-                Dzięki potędze sztucznej inteligencji będziemy mogli podpowiedzić Ci idealny kierunek studiów.
-                Nie ma znaczenia czy właśnie zdałeś maturę czy marzysz o zmianie pracy, nasza strona jest dla Ciebie.
+                Dzięki sztucznej inteligencji podpowiemy Ci idealny kierunek studiów, niezależnie od tego, czy właśnie zdałeś maturę czy planujesz zmianę pracy.
             </div>
         </div>
         <button mat-fab color="accent" class="m-2" routerLink="/questionnaire">
