add loader text

--- a/src/app/features/results/results.component.html
+++ b/src/app/features/results/results.component.html
@@ -2,6 +2,7 @@
   
   <div *ngIf="isLoading">
     <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+    <p style="color: white;">Sztuczna inteligencja właśnie oblicza dla Ciebie najlepsze dopasowanie. Jesteś bliżej niż myślisz.</p>
   </div>
 
   <div *ngIf="!isLoading">
