--- a/src/app/features/questionnaire/questionnaire.component.html
+++ b/src/app/features/questionnaire/questionnaire.component.html
@@ -3,8 +3,9 @@
     <img width="300" class="py-5" src="/assets/logo.png" alt="">
   </div>
 
-    <div class="w-full h-full flex justify-center items-center" *ngIf="loading">
+    <div class="w-full h-full flex flex-col justify-center items-center" *ngIf="loading">
         <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+        <p style="color: white;">Sztuczna inteligencja właśnie oblicza dla Ciebie najlepsze dopasowanie. Jesteś bliżej niż myślisz.</p>
     </div>
     
     <div *ngIf="!loading" class="parent">
