--- a/src/app/features/questionnaire/questionnaire.component.html
+++ b/src/app/features/questionnaire/questionnaire.component.html
@@ -5,7 +5,7 @@
 
     <div class="w-full h-full flex flex-col justify-center items-center" *ngIf="loading">
         <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
-        <p style="color: white;">Sztuczna inteligencja właśnie oblicza dla Ciebie najlepsze dopasowanie. Jesteś bliżej niż myślisz.</p>
+        <p class="text-base text-center mt-2" style="color: white;">Sztuczna inteligencja właśnie oblicza dla Ciebie najlepsze dopasowanie. Jesteś bliżej niż myślisz.</p>
     </div>
     
     <div *ngIf="!loading" class="parent">
